compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__struct_pattern_rest.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Struct {
                                        path: TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 13,
                                                            end: 18,
                                                            start_line: 1,
                                                            start_col: 14,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 13,
                                                end: 18,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        fields: [
                                            StructPatternField {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 21,
                                                        end: 22,
                                                        start_line: 1,
                                                        start_col: 22,
                                                    },
                                                },
                                                pattern: None,
                                                span: Span {
                                                    start: 21,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        ],
                                        rest: true,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 28,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 31,
                                                                end: 32,
                                                                start_line: 1,
                                                                start_col: 32,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 31,
                                            end: 32,
                                            start_line: 1,
                                            start_col: 32,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 33,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 35,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 35,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 35,
        start_line: 1,
        start_col: 1,
    },
}
